May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/plugins.c: Use functions instead of using global variables,
   other minor cleanups.
 * gui/Plugin.c: Likewise.
 * gui/LnxMain.c: Likewise.
 * gui/Gtk2Gui.c: Likewise.
 * libpcsxcore/cdriso.c: Likewise.
 * libpcsxcore/psxcommon.c: Likewise.
 * libpcsxcore/plugins.h: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxhw.c: Likewise.

May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdrom.c: Got rid of gzfreezel.
 * libpcsxcore/mdec.c: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.
 * libpcsxcore/misc.c: Added savestate versioning support.
 * gui/Gtk2Gui.c: Don't reset when loading from savestate unless loading
   succeeded.

May 10, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/sio.h: Some code (regs,macro) was moved to the 'c' file. 
 * libpcsxcore/sio.c: Likewise.

May 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * configure.ac: libbz2 is no longer needed.
 * debian/control: Likewise.
 * libpcsxcore/plugins.c: CDRgetBufferSub() is now mandatory.
 * libpcsxcore/cdrom.h: Savestate compatibility is already broken, so no need
   to stuff garbage into saved files :)
 * libpcsxcore/mdec.c: Likewise.
 * libpcsxcore/psxhw.c: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.

May 9, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/psxcounters.c: psxRcntFreeze was fixed.
 * plugins/dfxvideo/prim.c: Returned some code (iGPUHeight=1024), IMO, it's
   wrong, can't perform the tests.

May 9, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/plugins.c: Removed support for ancient GPU/SPU plugin APIs.
 * libpcsxcore/plugins.h: Likewise.

May 8, 2010 edgbla <edgbla@yandex.ru>

 * plugins/dfxvideo/prim.c: Dithering logic was fixed.
 * plugins/dfxvideo/gpucfg-0.1df/main.c: Likewise.
